; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/d3dcompiler_43/extr_hlsl.c_colors_match.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/d3dcompiler_43/extr_hlsl.c_colors_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, %struct.TYPE_4__*, float)* @colors_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @colors_match(%struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %0, %struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %1, float %2) #0 {
  %4 = alloca float, align 4
  store float %2, float* %4, align 4
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 3
  %6 = load i64, i64* %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 3
  %8 = load i64, i64* %7, align 8
  %9 = sub nsw i64 %6, %8
  %10 = call float @fabs(i64 %9)
  %11 = load float, float* %4, align 4
  %12 = fcmp olt float %10, %11
  br i1 %12, label %13, label %40

13:                                               ; preds = %3
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = sub nsw i64 %15, %17
  %19 = call float @fabs(i64 %18)
  %20 = load float, float* %4, align 4
  %21 = fcmp olt float %19, %20
  br i1 %21, label %22, label %40

22:                                               ; preds = %13
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = sub nsw i64 %24, %26
  %28 = call float @fabs(i64 %27)
  %29 = load float, float* %4, align 4
  %30 = fcmp olt float %28, %29
  br i1 %30, label %31, label %40

31:                                               ; preds = %22
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = sub nsw i64 %33, %35
  %37 = call float @fabs(i64 %36)
  %38 = load float, float* %4, align 4
  %39 = fcmp olt float %37, %38
  br label %40

40:                                               ; preds = %31, %22, %13, %3
  %41 = phi i1 [ false, %22 ], [ false, %13 ], [ false, %3 ], [ %39, %31 ]
  %42 = zext i1 %41 to i32
  ret i32 %42
}

declare dso_local float @fabs(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
